--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Projeto 01</title>
 		<meta charset="utf-8">
+		<link rel="sortcut icon" href="favicon.ico" type="image/x-icon" />;
 		<link href="https://fonts.googleapis.com/css2?family=Archivo&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet" />
 	</head>
