--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		
 	<head>
 		<title>Projeto 01</title>
+		<link rel="prefetch" href="/favicon.ico">
 		<meta charset="utf-8">
 		<link href="https://fonts.googleapis.com/css2?family=Archivo&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet" />
