--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt_BR">
 		
 	<head>
-		<title>Projeto 01</title>
-		<link rel="prefetch" href="/favicon.ico">
+		<title>Polfy - Danki Code não oficial</title>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
+		<meta name="description" content="Landing-Page Simples desenvolvida sob mentoria da Danki Code.">
+		<meta name="keywords" content="teste,palvras-chave,para,um,site,qualquer">
+		<meta name="author" content="Iago">
 		<link href="https://fonts.googleapis.com/css2?family=Archivo&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
-		<link href="css/style.css" rel="stylesheet" />
+		<link href="css/style.css" type="text/css" rel="stylesheet" />
+		<link rel="icon" href="./favicon.png">
 	</head>
 
 	<body>
@@ -105,7 +109,7 @@
 
 			<footer>2020 ©Todos os direitos reservados</footer>
 
-		</div><!--footer>
+		</div><!--footer-->
 
 	</body>
 
