--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt_BR">
 		
 	<head>
-		<title>Polfy - Danki Code não oficial</title>
+		<title>Polfy - aprenda com quem está no mercado</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
 		<meta name="description" content="Landing-Page Simples desenvolvida sob mentoria da Danki Code.">
@@ -16,7 +16,7 @@
 	<body>
 		<div class="header">
 			<div class="center">
-				<img src="images/logo.png" alt="logo">
+				<img src="./favicon.png" alt="logo">
 			</div><!--center-->
 		</div><!--header-->
 
