--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 		<div class="container-banner">
 			<div class="container-list">
 				<ul>
-					<li>Projeto 01 de uma aula da Danki.Code</li>
-					<li>Algumas alterações foram feitas neste site</li>
-					<li>Por exemplo o botão para enviar o formulário</li>
-					<li>Foi colocado um hover para que ele mude seu formato</li>
+					<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+					<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+					<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+					<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
 				</ul>
 			</div><!--container-list-->
 
